--- a/frontend/user-management.html
+++ b/frontend/user-management.html
@@ -5,30 +5,183 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Management | QueueEase</title>
   <link rel="stylesheet" href="css/styles.css">
+  <script>
+    async function loadUsers() {
+      try {
+        const response = await fetch('/api/admin/users'); // Fetch from admin API
+        if (!response.ok) {
+          throw new Error('Failed to fetch users.');
+        }
+        const users = await response.json(); // Parse JSON response
+  
+        const usersTable = document.getElementById('usersTable');
+        usersTable.innerHTML = ''; // Clear the table first
+  
+        users.forEach(user => {
+          const row = document.createElement('tr');
+          row.innerHTML = `
+            <td>${user.id}</td>
+            <td>${user.first_name}</td>
+            <td>${user.last_name}</td>
+            <td>${user.address}</td>
+            <td>${user.zip_code}</td>
+            <td>${user.contact_number}</td>
+            <td>${user.email}</td>
+            <td>${user.role}</td>
+            <td>
+              <button onclick="editUser(${user.id})">Edit</button>
+              <button onclick="deleteUser(${user.id})">Delete</button>
+            </td>
+          `;
+          usersTable.appendChild(row);
+        });
+      } catch (error) {
+        console.error('Error loading users:', error);
+      }
+    }
+  
+    async function addUser(event) {
+      event.preventDefault();
+  
+      const userForm = document.getElementById('userForm');
+      const formData = new FormData(userForm);
+      const userData = Object.fromEntries(formData.entries());
+      const id = userData.id;
+  
+      const method = id ? 'PUT' : 'POST';
+      const url = id ? `/api/admin/users/${id}` : '/api/admin/users';
+  
+      try {
+        const response = await fetch(url, {
+          method,
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(userData),
+        });
+  
+        if (response.ok) {
+          alert('User saved successfully.');
+          userForm.reset();
+          loadUsers();
+        } else {
+          const result = await response.json();
+          alert(result.message || 'Failed to save user.');
+        }
+      } catch (error) {
+        console.error('Error saving user:', error);
+      }
+    }
+  
+    async function editUser(id) {
+      try {
+        const response = await fetch(`/api/admin/users/${id}`);
+        const user = await response.json();
+  
+        // Populate the form with user data
+        document.getElementById('id').value = user.id;
+        document.getElementById('first_name').value = user.first_name;
+        document.getElementById('last_name').value = user.last_name;
+        document.getElementById('address').value = user.address;
+        document.getElementById('zip_code').value = user.zip_code;
+        document.getElementById('contact_number').value = user.contact_number;
+        document.getElementById('email').value = user.email;
+        document.getElementById('role').value = user.role;
+      } catch (error) {
+        console.error('Error editing user:', error);
+      }
+    }
+  
+    async function deleteUser(id) {
+      if (!confirm('Are you sure you want to delete this user?')) return;
+  
+      try {
+        const response = await fetch(`/api/admin/users/${id}`, { method: 'DELETE' });
+  
+        if (response.ok) {
+          alert('User deleted successfully.');
+          loadUsers();
+        } else {
+          const result = await response.json();
+          alert(result.message || 'Failed to delete user.');
+        }
+      } catch (error) {
+        console.error('Error deleting user:', error);
+      }
+    }
+  
+    document.addEventListener('DOMContentLoaded', loadUsers);
+  </script>
+  
 </head>
 <body>
   <header>
     <h1>User Management</h1>
+    <nav>
+      <a href="admin-dashboard.html">Dashboard</a>
+      <a href="queue-management.html">Manage Queue</a>
+      <a href="notifications.html">Send Notifications</a>
+      <a href="index.html">Logout</a>
+    </nav>
   </header>
-  <main>
-    <table>
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Name</th>
-          <th>Email</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1</td>
-          <td>John Doe</td>
-          <td>johndoe@example.com</td>
-          <td><button>Edit</button> <button>Delete</button></td>
-        </tr>
-      </tbody>
-    </table>
-  </main>
+
+  <h2>Users List</h2>
+  <table border="1">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Address</th>
+        <th>Zip Code</th>
+        <th>Contact Number</th>
+        <th>Email</th>
+        <th>Role</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody id="usersTable">
+      <!-- Rows will be dynamically generated here -->
+    </tbody>
+  </table>
+
+  <h2>Add/Edit User</h2>
+  <form id="userForm" onsubmit="addUser(event)">
+    <input type="hidden" id="id" name="id">
+    <div>
+      <label for="first_name">First Name:</label>
+      <input type="text" id="first_name" name="first_name" required>
+    </div>
+    <div>
+      <label for="last_name">Last Name:</label>
+      <input type="text" id="last_name" name="last_name" required>
+    </div>
+    <div>
+      <label for="address">Address:</label>
+      <input type="text" id="address" name="address" required>
+    </div>
+    <div>
+      <label for="zip_code">Zip Code:</label>
+      <input type="text" id="zip_code" name="zip_code" required>
+    </div>
+    <div>
+      <label for="contact_number">Contact Number:</label>
+      <input type="text" id="contact_number" name="contact_number" required>
+    </div>
+    <div>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+    </div>
+    <div>
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" required>
+    </div>
+    <div>
+      <label for="role">Role:</label>
+      <select id="role" name="role">
+        <option value="user">User</option>
+        <option value="admin">Admin</option>
+      </select>
+    </div>
+    <button type="submit">Save</button>
+  </form>
 </body>
 </html>
