--- a/frontend/user-management.html
+++ b/frontend/user-management.html
@@ -13,54 +13,71 @@
           throw new Error('Failed to fetch users.');
         }
         const users = await response.json(); // Parse JSON response
-  
+
         const usersTable = document.getElementById('usersTable');
-        usersTable.innerHTML = ''; // Clear the table first
-  
+        const adminsTable = document.getElementById('adminsTable');
+        usersTable.innerHTML = ''; // Clear the users table
+        adminsTable.innerHTML = ''; // Clear the admins table
+
         users.forEach(user => {
           const row = document.createElement('tr');
-          row.innerHTML = `
-            <td>${user.id}</td>
-            <td>${user.first_name}</td>
-            <td>${user.last_name}</td>
-            <td>${user.address}</td>
-            <td>${user.zip_code}</td>
-            <td>${user.contact_number}</td>
-            <td>${user.email}</td>
-            <td>${user.role}</td>
-            <td>
-              <button onclick="editUser(${user.id})">Edit</button>
-              <button onclick="deleteUser(${user.id})">Delete</button>
-            </td>
-          `;
-          usersTable.appendChild(row);
+          if (user.role === 'admin') {
+            // Add admin row to the admins table
+            row.innerHTML = `
+              <td>${user.id}</td>
+              <td>${user.first_name}</td>
+              <td>${user.last_name}</td>
+              <td>${user.address}</td>
+              <td>${user.zip_code}</td>
+              <td>${user.contact_number}</td>
+              <td>${user.email}</td>
+            `;
+            adminsTable.appendChild(row);
+          } else {
+            // Add user row to the users table
+            row.innerHTML = `
+              <td>${user.id}</td>
+              <td contenteditable="true">${user.first_name}</td>
+              <td contenteditable="true">${user.last_name}</td>
+              <td contenteditable="true">${user.address}</td>
+              <td contenteditable="true">${user.zip_code}</td>
+              <td contenteditable="true">${user.contact_number}</td>
+              <td>${user.email}</td>
+              <td>
+                <button onclick="enableEdit(this)">Edit</button>
+                <button onclick="saveRow(${user.id}, this)" style="display: none;">Save</button>
+                <button onclick="deleteUser(${user.id})">Delete</button>
+              </td>
+            `;
+            usersTable.appendChild(row);
+          }
         });
       } catch (error) {
         console.error('Error loading users:', error);
       }
     }
-  
+
     async function addUser(event) {
       event.preventDefault();
-  
+
       const userForm = document.getElementById('userForm');
       const formData = new FormData(userForm);
       const userData = Object.fromEntries(formData.entries());
       const id = userData.id;
-  
+
       const method = id ? 'PUT' : 'POST';
       const url = id ? `/api/admin/users/${id}` : '/api/admin/users';
-  
+
       try {
         const response = await fetch(url, {
           method,
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(userData),
         });
-  
+
         if (response.ok) {
           alert('User saved successfully.');
-          userForm.reset();
+          resetForm();
           loadUsers();
         } else {
           const result = await response.json();
@@ -70,32 +87,60 @@
         console.error('Error saving user:', error);
       }
     }
-  
-    async function editUser(id) {
-      try {
-        const response = await fetch(`/api/admin/users/${id}`);
-        const user = await response.json();
-  
-        // Populate the form with user data
-        document.getElementById('id').value = user.id;
-        document.getElementById('first_name').value = user.first_name;
-        document.getElementById('last_name').value = user.last_name;
-        document.getElementById('address').value = user.address;
-        document.getElementById('zip_code').value = user.zip_code;
-        document.getElementById('contact_number').value = user.contact_number;
-        document.getElementById('email').value = user.email;
-        document.getElementById('role').value = user.role;
-      } catch (error) {
-        console.error('Error editing user:', error);
-      }
+
+    function enableEdit(editButton) {
+      const row = editButton.closest('tr');
+      row.querySelectorAll('td[contenteditable]').forEach(cell => {
+        cell.contentEditable = 'true';
+      });
+
+      editButton.style.display = 'none'; // Hide the Edit button
+      const saveButton = row.querySelector('button[onclick^="saveRow"]');
+      if (saveButton) saveButton.style.display = 'inline'; // Show the Save button
     }
-  
+
+    async function saveRow(id, button) {
+  const row = button.closest('tr');
+  const passwordCell = row.children[7]; // Adjust this index based on your table layout
+
+  const updatedData = {
+    first_name: row.children[1].textContent.trim(),
+    last_name: row.children[2].textContent.trim(),
+    address: row.children[3].textContent.trim(),
+    zip_code: row.children[4].textContent.trim(),
+    contact_number: row.children[5].textContent.trim(),
+    email: row.children[6].textContent.trim(), // Ensure email is preserved
+    password: passwordCell.textContent.trim() || null, // Keep existing password unless updated
+    role: row.children[8].querySelector('select').value, // Adjust this index for your table
+  };
+
+  try {
+    const response = await fetch(`/api/admin/users/${id}`, {
+      method: 'PUT',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify(updatedData),
+    });
+
+    if (response.ok) {
+      alert('User updated successfully.');
+      loadUsers(); // Refresh the user list
+    } else {
+      const result = await response.json();
+      alert(result.message || 'Failed to update user.');
+    }
+  } catch (error) {
+    console.error('Error saving user:', error);
+  }
+}
+
+
+
     async function deleteUser(id) {
       if (!confirm('Are you sure you want to delete this user?')) return;
-  
+
       try {
         const response = await fetch(`/api/admin/users/${id}`, { method: 'DELETE' });
-  
+
         if (response.ok) {
           alert('User deleted successfully.');
           loadUsers();
@@ -107,10 +152,16 @@
         console.error('Error deleting user:', error);
       }
     }
-  
+
+    function resetForm() {
+      document.getElementById('userForm').reset();
+      document.querySelector('h2').innerText = 'Add/Edit User';
+      document.querySelector('button[type="submit"]').innerText = 'Save';
+      document.querySelector('#userForm').style.border = 'none';
+    }
+
     document.addEventListener('DOMContentLoaded', loadUsers);
   </script>
-  
 </head>
 <body>
   <header>
@@ -122,26 +173,6 @@
       <a href="index.html">Logout</a>
     </nav>
   </header>
-
-  <h2>Users List</h2>
-  <table border="1">
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Address</th>
-        <th>Zip Code</th>
-        <th>Contact Number</th>
-        <th>Email</th>
-        <th>Role</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-    <tbody id="usersTable">
-      <!-- Rows will be dynamically generated here -->
-    </tbody>
-  </table>
 
   <h2>Add/Edit User</h2>
   <form id="userForm" onsubmit="addUser(event)">
@@ -172,7 +203,7 @@
     </div>
     <div>
       <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required>
+      <input type="password" id="password" name="password">
     </div>
     <div>
       <label for="role">Role:</label>
@@ -182,6 +213,44 @@
       </select>
     </div>
     <button type="submit">Save</button>
+    <button type="button" onclick="resetForm()">Cancel</button>
   </form>
+
+  <h2>Admins List</h2>
+  <table border="1">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Address</th>
+        <th>Zip Code</th>
+        <th>Contact Number</th>
+        <th>Email</th>
+      </tr>
+    </thead>
+    <tbody id="adminsTable">
+      <!-- Admin rows will be dynamically generated here -->
+    </tbody>
+  </table>
+  
+  <h2>Users List</h2>
+  <table border="1">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Address</th>
+        <th>Zip Code</th>
+        <th>Contact Number</th>
+        <th>Email</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody id="usersTable">
+      <!-- User rows will be dynamically generated here -->
+    </tbody>  
+  </table>
 </body>
 </html>
