--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,19 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Login | QueueEase</title>
-</head>
-<body>
-  <h1>Login</h1>
-  <form id="loginForm" action="/user/login" method="POST">
-    <input type="email" id="email" name="email" placeholder="Email" required />
-    <input type="password" id="password" name="password" placeholder="Password" required />
-    <button type="submit">Login</button>
-    <a href="register.html">Sign Up</a>
-  </form>
-  <script src="scripts.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Login | QueueEase</title>
+		<link rel="stylesheet" href="css/styles.css" />
+	</head>
+	<body>
+		<header>
+			<h1>Login</h1>
+		</header>
+
+		<main>
+			<section>
+				<form id="loginForm" action="/user/login" method="POST">
+					<input
+						type="email"
+						id="email"
+						name="email"
+						placeholder="Email"
+						required
+					/>
+					<input
+						type="password"
+						id="password"
+						name="password"
+						placeholder="Password"
+						required
+					/>
+					<button type="submit">Login</button>
+					<a href="register.html">Sign Up</a>
+				</form>
+			</section>
+		</main>
+		<script src="scripts.js"></script>
+	</body>
 </html>
