--- a/frontend/login.html
+++ b/frontend/login.html
@@ -13,26 +13,57 @@
 
 		<main>
 			<section>
-				<form id="loginForm" action="/user/login" method="POST">
-					<input
-						type="email"
-						id="email"
-						name="email"
-						placeholder="Email"
-						required
-					/>
+				<form id="loginForm">
+					<label for="email">Email:</label>
+					<input type="email" id="email" name="email" required /><br /><br />
+
+					<label for="password">Password:</label>
 					<input
 						type="password"
 						id="password"
 						name="password"
-						placeholder="Password"
 						required
-					/>
+					/><br /><br />
+
 					<button type="submit">Login</button>
-					<a href="register.html">Sign Up</a>
 				</form>
 			</section>
 		</main>
-		<script src="scripts.js"></script>
+
+		<script>
+			document
+				.getElementById("loginForm")
+				.addEventListener("submit", async function (event) {
+					event.preventDefault();
+
+					const formData = new FormData(event.target);
+					const data = Object.fromEntries(formData.entries());
+
+					try {
+						const response = await fetch("/user/login", {
+							// Update the endpoint to /user/login
+							method: "POST",
+							headers: {
+								"Content-Type": "application/json",
+							},
+							body: JSON.stringify(data),
+						});
+
+						if (response.ok) {
+							const result = await response.json();
+							localStorage.setItem("user_id", result.user_id); // Store the user ID in localStorage
+							alert("Login successful!");
+							window.location.href = "user-queue.html"; // Redirect to the queue page
+						} else {
+							const error = await response.json();
+							alert(`Error: ${error.message}`);
+						}
+					} catch (error) {
+						alert(
+							"An error occurred while logging in. Please try again later."
+						);
+					}
+				});
+		</script>
 	</body>
 </html>
