--- a/frontend/user-queue.html
+++ b/frontend/user-queue.html
@@ -6,57 +6,82 @@
   <title>User Queue | QueueEase</title>
   <link rel="stylesheet" href="css/styles.css">
   <script>
-    async function loadCurrentQueue() {
+    // Load available services for the dropdown
+    async function loadServices() {
       try {
-        const response = await fetch('/api/admin/queue/current');
-        if (!response.ok) throw new Error('Failed to fetch current queue.');
+        const response = await fetch('/api/admin/services');
+        if (!response.ok) throw new Error('Failed to fetch services.');
 
-        const data = await response.json();
-        document.getElementById('currentServing').textContent = data.queue_number || 'None';
+        const services = await response.json();
+        const serviceSelect = document.getElementById('service_id');
+
+        services.forEach(service => {
+          const option = document.createElement('option');
+          option.value = service.service_id;
+          option.textContent = service.service_name;
+          serviceSelect.appendChild(option);
+        });
       } catch (error) {
-        console.error('Error fetching current queue:', error);
+        console.error('Error fetching services:', error);
       }
     }
 
+    // Get user ID from localStorage
+    function getUserID() {
+      const user_id = localStorage.getItem('id');
+      if (!user_id) {
+        alert('Failed to retrieve user ID. Please log in again.');
+        window.location.href = 'login.html'; // Redirect to login page
+        return null;
+      }
+      return user_id;
+    }
+
+    // Function to join the queue
     async function joinQueue() {
-      const userId = 1; // Replace with actual logged-in user ID
-      const transactionType = document.getElementById('transactionType').value;
+      const serviceSelect = document.getElementById('service_id');
+      const service_id = serviceSelect.value;
+
+      if (!service_id) {
+        alert('Please select a transaction.');
+        return;
+      }
+
+      const user_id = getUserID();
+      if (!user_id) return;
+
+      const data = { user_id, service_id };
 
       try {
         const response = await fetch('/api/admin/transactions', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ user_id: userId, transaction_type: transactionType }),
+          body: JSON.stringify(data),
         });
 
+        const result = await response.json();
         if (response.ok) {
-          const data = await response.json();
-          alert('Joined the queue successfully!');
-          loadUserQueueNumber(userId);
+          alert(
+            `Joined the queue successfully! Your queue number is: ${result.queue_number} for transaction type: ${result.transaction_type}`
+          );
         } else {
-          alert('Failed to join the queue.');
+          alert(result.error || 'Failed to join the queue.');
         }
       } catch (error) {
-        console.error('Error joining queue:', error);
+        console.error('Error:', error);
       }
     }
 
-    async function loadUserQueueNumber(userId) {
-      try {
-        const response = await fetch(`/api/user/${userId}/queue-number`);
-        if (!response.ok) throw new Error('Failed to fetch user queue number.');
-
-        const data = await response.json();
-        document.getElementById('userQueueNumber').textContent = data.queue_number || 'None';
-      } catch (error) {
-        console.error('Error fetching user queue number:', error);
-      }
-    }
-
+    // Initialize the page
     document.addEventListener('DOMContentLoaded', () => {
-      loadCurrentQueue();
-      const userId = 1; // Replace with actual logged-in user ID
-      loadUserQueueNumber(userId);
+      loadServices();
+
+      const joinQueueButton = document.getElementById('joinQueueButton');
+      if (joinQueueButton) {
+        joinQueueButton.addEventListener('click', joinQueue);
+      } else {
+        console.error('Join Queue button not found in the DOM.');
+      }
     });
   </script>
 </head>
@@ -73,19 +98,12 @@
   <main>
     <section>
       <h2>Join Queue</h2>
-      <label for="transactionType">Select Transaction Type:</label>
-      <select id="transactionType">
-        <option value="Type 1">Type 1</option>
-        <option value="Type 2">Type 2</option>
-        <option value="Type 3">Type 3</option>
-      </select>
-      <button onclick="joinQueue()">Join Queue</button>
-    </section>
+      <label for="service_id">Choose a transaction:</label>
+      <select id="service_id" name="service_id" required>
+        <option value="" disabled selected>Select a service</option>
+      </select><br><br>
 
-    <section>
-      <h2>Current Queue Status</h2>
-      <p>Currently Serving: <span id="currentServing">Loading...</span></p>
-      <p>Your Number: <span id="userQueueNumber">Loading...</span></p>
+      <button id="joinQueueButton">Join Queue</button>
     </section>
   </main>
 </body>
