--- a/frontend/queue-management.html
+++ b/frontend/queue-management.html
@@ -5,11 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Queue Management | QueueEase</title>
   <link rel="stylesheet" href="css/styles.css">
-  <script src="/socket.io/socket.io.js"></script> <!-- Include Socket.IO -->
+  <script src="/socket.io/socket.io.js"></script>
   <script>
-    let socket;
+    const socket = io(); // Initialize WebSocket connection
 
-    // Load the live queue
     async function loadQueue() {
       try {
         const response = await fetch('/api/admin/queue');
@@ -39,7 +38,6 @@
       }
     }
 
-    // Load completed transactions
     async function loadCompletedTransactions() {
       try {
         const response = await fetch('/api/admin/completed-transactions');
@@ -64,13 +62,11 @@
       }
     }
 
-    // Update queue status
     async function updateQueue(queueNumber, action) {
       try {
         const response = await fetch(`/api/admin/queue/${queueNumber}/${action}`, { method: 'PUT' });
         if (response.ok) {
           alert(`Queue #${queueNumber} ${action}d successfully.`);
-          // Reload data after updating
           loadQueue();
           loadCompletedTransactions();
         } else {
@@ -81,18 +77,21 @@
       }
     }
 
-    // Initialize the page
+    // WebSocket event listeners for real-time updates
+    socket.on('queueUpdated', () => {
+      console.log('Queue update received. Reloading queue...');
+      loadQueue();
+    });
+
+    socket.on('transactionUpdated', (transaction) => {
+      console.log('Transaction update received:', transaction);
+      loadQueue();
+      loadCompletedTransactions();
+    });
+
     document.addEventListener('DOMContentLoaded', () => {
       loadQueue();
       loadCompletedTransactions();
-
-      // Set up WebSocket for live updates
-      socket = io();
-      socket.on('queueUpdated', () => {
-        console.log('Queue updated. Reloading data...');
-        loadQueue();
-        loadCompletedTransactions();
-      });
     });
   </script>
 </head>
